--- a/style.css
+++ b/style.css
@@ -31,15 +31,14 @@ p {
 /* display flex */
 .dis-flex {
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	margin-bottom: 50px;
 }
 /* display 50% diveded  */
 .half-side {
 	width: 50%;
 	margin: 5%;
 }
-/* a tag a ak sathe color ar jonno .btn use  */
+/* anchor tag use  */
 a {
 	background-color: orange;
 	padding: 15px 40px;
@@ -49,18 +48,9 @@ a {
 	color: white;
 	font-weight: 400;
 }
-/* btn1 for form TAG */
-.btn1 {
-	font-weight: 700;
-	color: white;
-	padding: 10px 30px;
-	border-radius: 30px;
-	width: 20%;
-	background-image: linear-gradient(orange, tomato);
-}
-/* a tag a .btn class ar nice margin add ar jonno .mt use */
-.mt {
-	margin-bottom: 30%;
+
+p {
+	text-align: justify;
 }
 
 .half-side img {
@@ -68,14 +58,14 @@ a {
 }
 /* img k coto korar jonno use .short-img */
 .short-img {
-	height: 450px;
+	height: 100vh;
 	width: 60%;
 }
 .back-img {
 	background-image: url(./images/shapes/7.png);
 	background-repeat: no-repeat;
-	width: 100%;
-	background-position: center;
+	height: 100%;
+	background-size: cover;
 }
 
 .card {
