--- a/style.css
+++ b/style.css
@@ -17,7 +17,11 @@ h1 {
 p {
 	font-family: "Lato", sans-serif;
 	font-size: 20px;
-	text-align: center;
+	text-align: justify;
+	margin-bottom: 50px;
+}
+.center {
+	justify-content: center;
 }
 
 /* span tag ar  text-color change jonno */
@@ -44,11 +48,6 @@ a {
 	font-weight: 400;
 }
 
-p {
-	text-align: justify;
-	margin-bottom: 50px;
-}
-
 .half-side img {
 	width: 100%;
 }
@@ -63,7 +62,9 @@ p {
 	height: 100%;
 	background-size: cover;
 }
-
+.center {
+	text-align: center;
+}
 .card {
 	width: 25%;
 	height: 400px;
